# contrast_max_cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat  config.example.json  config.json  shell.nix
.cache/clangd/index/: main.cpp.51F948884BE322BA.idx
include/: filereader.hpp
lib/: CMakeLists.txt  contrastmax.cpp  contrastmax.hpp  fastgaussianblur.hpp  filereader.cpp  filereader.hpp  video.cpp  video.hpp
src/: filereader.cpp  main.cpp  metavision_evt3_raw_file_decoder.cpp
